--- a/CSS/reset.css
+++ b/CSS/reset.css
@@ -8,6 +8,6 @@
 }
 
 body{
-    background: linear-gradient(to right,var(--rosa), rgb(233, 107, 128) );
+    background: linear-gradient(to right,var(--rosa) 40%, rgb(253, 152, 169) );
     height: 100vh;
 }
