--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,4 +1,8 @@
 main{
-    width: 75vw;
-    background-color: pink;
+    background-color: rgb(255, 209, 216);
+    text-align: center;
+    margin-left: 100px;
+    margin-right: 100px;
+    padding: 20px;
+    box-shadow: 0px 0px 10px rgb(163, 163, 163);
 }
