--- a/CSS/header.css
+++ b/CSS/header.css
@@ -8,6 +8,7 @@ header{
     width: 300px;
     border-radius: 100%;
     margin-bottom: 20px;
+    cursor: pointer;
 }
 
 nav>a{
@@ -17,4 +18,9 @@ nav>a{
     text-decoration: none;
     font-size: 22px;
     padding: 12px;   
+}
+
+nav>a:hover{
+    color: rgb(94, 9, 61);
+    transition-duration: 0.5s;
 }
