--- a/CSS/header.css
+++ b/CSS/header.css
@@ -1,6 +1,6 @@
 header{
     background-color: rgb(247, 114, 136);
-    padding: 20px;
+    padding: 0px;
     text-align: center;
 }
 
@@ -9,6 +9,12 @@ header{
     border-radius: 100%;
     margin-bottom: 20px;
     cursor: pointer;
+    margin-top: 25px;
+}
+
+nav{
+    background-color: rgb(236, 59, 89);
+    padding: 5px;
 }
 
 nav>a{
@@ -16,11 +22,12 @@ nav>a{
     color: white;
     text-shadow: 2px 2px 2px grey;
     text-decoration: none;
-    font-size: 22px;
+    font-size: 20px;
     padding: 10px;   
 }
 
 nav>a:hover{
-    color: rgb(94, 9, 61);
+    color: rgb(241, 203, 225);
     transition-duration: 0.5s;
+    text-shadow: 2px 2px 2px rgb(0, 0, 0);
 }
