--- a/CSS/header.css
+++ b/CSS/header.css
@@ -5,7 +5,7 @@ header{
 }
 
 #logo>img{
-    width: 300px;
+    width: 250px;
     border-radius: 100%;
     margin-bottom: 20px;
     cursor: pointer;
@@ -20,14 +20,15 @@ nav{
 nav>a{
     text-align: center;
     color: white;
-    text-shadow: 2px 2px 2px grey;
+    text-shadow: 2px 2px 2px rgb(73, 73, 73);
     text-decoration: none;
-    font-size: 20px;
-    padding: 10px;   
+    font-size: 30px;
+    padding: 10px;
+    margin-left: 50px;   
 }
 
 nav>a:hover{
-    color: rgb(241, 203, 225);
+    color: rgb(241, 231, 141);
     transition-duration: 0.5s;
     text-shadow: 2px 2px 2px rgb(0, 0, 0);
 }
