--- a/CSS/ofertas.css
+++ b/CSS/ofertas.css
@@ -3,16 +3,36 @@
     justify-content: space-around;
 }
 
+#oferta_bloco2{
+    display: flex;
+    justify-content: space-around;
+}
+
 #oferta_bloco1>div>img{
     display: flex;
     justify-content: space-around;
-    width: 300px;
+    width: 500px;
+    border-radius: 20px;
+    margin-top: 20px;
+    background-color: rgb(236, 59, 89);
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px grey;
+    cursor: pointer;
 }
 
 #oferta_bloco2>div>img{
     display: flex;
     justify-content: space-around;
-    width: 300px;
+    width: 500px;
+    border-radius: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background-color: rgb(236, 59, 89);
+    padding: 10px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px grey;
+    cursor: pointer;
 }
 
 #oferta>div>img{
