--- a/CSS/ofertas.css
+++ b/CSS/ofertas.css
@@ -3,45 +3,16 @@
     justify-content: space-around;
 }
 
-#oferta_bloco2{
-    display: flex;
-    justify-content: space-around;
-}
-
 #oferta_bloco1>div>img{
     display: flex;
     justify-content: space-around;
-    width: 500px;
+    width: 30vw;
     border-radius: 20px;
-    margin-top: 20px;
+    margin-top: 30px;
     background-color: rgb(236, 59, 89);
     padding: 10px;
     border-radius: 20px;
     box-shadow: 2px 2px 10px grey;
     cursor: pointer;
-}
-
-#oferta_bloco2>div>img{
-    display: flex;
-    justify-content: space-around;
-    width: 500px;
-    border-radius: 20px;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: rgb(236, 59, 89);
-    padding: 10px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px grey;
-    cursor: pointer;
-}
-
-#oferta>div>img{
-    width: 400px;
-    margin: 20px;
-    background-color: rgb(236, 59, 89);
-    padding: 10px;
-    border-radius: 20px;
-    height: 400px;
-    box-shadow: 2px 2px 10px grey;
-    cursor: pointer;
+    margin-bottom: 30px;
 }
