--- a/CSS/mobile_sobre.css
+++ b/CSS/mobile_sobre.css
@@ -11,10 +11,9 @@
     }
 
     #sobre_mim>div>img{
-        width: 200px;
+        width: 50vw;
         border-radius: 100%;
-        text-align: center;
-        margin-left: 20px;
+        margin-left: 11vw;
     }
 
     #sobre_mim>p{
